cmd/k8s-ebook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebook-live
spec:
#  ClusterIP
  type: LoadBalancer
  selector:
    app: ebook-live
  ports:
    - protocol: TCP
      name: http
      port: 81
      targetPort: 8080
