cmd/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebook-live-mysql
spec:
  selector:
    app: ebook-live-mysql
  ports:
    - protocol: TCP
      # 你访问的端口
      port: 13306
      targetPort: 3306
      nodePort: 30002
  type: NodePort
