cmd/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebook-live-redis
spec:
  selector:
    app: ebook-live-redis
  ports:
    - protocol: TCP
      port: 16379
      #  Redis 默认端口
      targetPort: 16379
      nodePort: 30003
  type: NodePort
